--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1151,3 +1151,17 @@
 .group:hover .group-hover\:bg-muted\/60 {
   background-color: hsl(var(--muted) / 0.6);
 }
+/* prevent Scroll locked */
+
+body[data-scroll-locked][data-scroll-locked] {
+  --removed-body-scroll-bar-size: 0px;
+  overflow: auto !important;
+  overscroll-behavior: contain;
+  position: relative !important;
+  padding-left: 0px;
+  padding-top: 0px;
+  padding-right: 0px;
+  margin-left: 0;
+  margin-top: 0;
+  margin-right: 0 !important;
+}
